# rewrite

./: CLAUDE.md  README.md  pyproject.toml
rewrite/: analyzer.py  cli.py  config.py  output.py  scanner.py  transformer.py  usage_updater.py
tests/: test_fields.py  test_module_import.py  test_usage.py
